networking/istio/gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-system
  labels:
    app.kubernetes.io/part-of: shopping-cart
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - keycloak.shopping-cart.local
        - argocd.shopping-cart.local
        - frontend.shopping-cart.local
        - frontend.3ai-talk.org
