networking/istio/keycloak-destinationrule.yaml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: keycloak-disable-mtls
  namespace: istio-system
spec:
  host: keycloak.identity.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
